Tests/Runtime2/Error/Nested/InnerGoal.goal
InnerGoal
- call ThrowInnerError, on error call InnerHandler
